Fixed x-overflow & page misalignment

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -54,6 +54,7 @@ body {
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  
 }
 
 hr {
@@ -7615,7 +7616,33 @@ body {
   background-color: rgba(25, 34, 61, 0.95);
   margin: 0;
   font-family: monospace;
+  width: 101vw;
+  overflow-x:hidden;
+  margin-left: -0.75vw;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 0.5vw;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
+
 
 #heading {
   position: absolute;
@@ -11558,13 +11585,6 @@ body {
 
 
 
-html {
-  font-size: 1rem;
-  width: 100vw;
-}
 
-body {
-  width: 100vw;
-}
 
 
